More work as part of error prone checks.  It found some charset stuff that was worth fixing